Add openeye-toolkits dependency
Added to the `install_requires` field in setup.py, and modified
installation commands in .travis.yml and README.md. Also removed some
unnecessary lines from setup.py.

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
     # Activate the test environment
   - conda activate test
     # Build and install package
-  - python setup.py develop --no-deps
+  - pip install --extra-index-url https://pypi.anaconda.org/openeye/simple -e .
 
 script:
   - devtools/scripts/run_tests.sh
