Change testing command to simply be pytest
Before, the testing command was stored in `devtools/scripts/run_tests.sh`.
Now, the command `pytest` can simply be run, as the settings have been
moved to `setup.cfg`. Corresponding documentation has been updated in
CONTRIBUTING and devtools/README, and the testing command was changed
for Travis CI.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,9 @@ omit =
     # Omit generated versioneer
     dance/_version.py
 
+[tool:pytest]
+addopts = -v --cov-report term-missing --cov=dance dance/tests/
+
 [yapf]
 # YAPF, in .style.yapf files this shows up as "[style]" header
 COLUMN_LIMIT = 119
