--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ install:
   - pip install --extra-index-url https://pypi.anaconda.org/openeye/simple -e .
 
 script:
-  - devtools/scripts/run_tests.sh
+  - pytest
 
 notifications:
   email: false
