Add settings for pylint

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,9 +17,11 @@ COLUMN_LIMIT = 119
 INDENT_WIDTH = 4
 USE_TABS = False
 
-[flake8]
-# Flake8, PyFlakes, etc
+# TODO(btjanaka): remove .pylintrc when Pylint 2.5.0 is released (the current
+# version of Pylint does not support putting settings in setup.cfg)
+[pylint]
 max-line-length = 119
+single-line-if-stmt = yes
 
 [versioneer]
 # Automatic version numbering scheme
