--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,5 +3,7 @@ sphinx-rtd-theme
 sphinx-autobuild
 sphinx-automodapi
 
+numpy
+sortedcontainers
 --extra-index-url https://pypi.anaconda.org/openeye/simple
 openeye-toolkits
