Move pylint config to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,11 +17,13 @@ COLUMN_LIMIT = 119
 INDENT_WIDTH = 4
 USE_TABS = False
 
-# TODO(btjanaka): remove .pylintrc when Pylint 2.5.0 is released (the current
-# version of Pylint does not support putting settings in setup.cfg)
-[pylint]
+[pylint.FORMAT]
 max-line-length = 119
 single-line-if-stmt = yes
+
+[pylint.DESIGN]
+max-locals = 1000
+max-args = 1000
 
 [versioneer]
 # Automatic version numbering scheme
